docs: add `label` slots to all `auro-select` examples except placeholder section

--- a/components/select/apiExamples/basic.html
+++ b/components/select/apiExamples/basic.html
@@ -1,5 +1,6 @@
 <auro-select>
   <span slot="bib.fullscreen.headline">Bib Headline</span>
+  <span slot="label">Select Example</span>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
