--- a/components/select/apiExamples/flexMenuWidth.html
+++ b/components/select/apiExamples/flexMenuWidth.html
@@ -1,4 +1,5 @@
 <auro-select flexMenuWidth id="flexMenuWidthExample">
+  <span slot="label">flexMenuWidth select example</span>
   <span slot="bib.fullscreen.headline">Bib Headline</span>
   <label slot="placeholder">Placeholder Text</label>
   <auro-menu>
