--- a/components/select/apiExamples/multiselect.html
+++ b/components/select/apiExamples/multiselect.html
@@ -1,6 +1,7 @@
 <auro-select multiselect>
   <span slot="bib.fullscreen.headline">Bib Headline</span>
   <label slot="placeholder">Select one or more options</label>
+  <span slot="label">multiselect select example</span>
   <auro-menu>
     <auro-menuoption value="1">Option 1</auro-menuoption>
     <auro-menuoption value="2">Option 2</auro-menuoption>
