--- a/components/select/apiExamples/nestedSelect.html
+++ b/components/select/apiExamples/nestedSelect.html
@@ -15,6 +15,7 @@
   <span slot="header">Visible Overflow Dialog</span>
   <div slot="content">
     <auro-select id="nestedSelect">
+      <span slot="label">Nested Select Example</span>
       <auro-menu>
         <auro-menuoption value="stops">Stops</auro-menuoption>
         <auro-menuoption value="price">Price</auro-menuoption>
