--- a/components/select/apiExamples/valueAlert.html
+++ b/components/select/apiExamples/valueAlert.html
@@ -1,4 +1,5 @@
 <auro-select id="valueAlert">
+  <span slot="label">Select Example</span>
   <span slot="bib.fullscreen.headline">Bib Headline</span>
   <label slot="placeholder">Placeholder Text</label>
   <auro-menu id="valueAlertMenu">
