--- a/components/select/apiExamples/disabled.html
+++ b/components/select/apiExamples/disabled.html
@@ -1,6 +1,7 @@
 <auro-select disabled>
   <span slot="bib.fullscreen.headline">Bib Headline</span>
   <label slot="placeholder">Placeholder Text</label>
+  <span slot="label">disabled select example</span>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
