--- a/components/select/apiExamples/error.html
+++ b/components/select/apiExamples/error.html
@@ -1,4 +1,5 @@
 <auro-select error="Custom error message">
+  <span slot="label">error select example</span>
   <span slot="bib.fullscreen.headline">Bib Headline</span>
   <label slot="placeholder">Placeholder Text</label>
   <auro-menu>
