--- a/components/select/apiExamples/fullscreenBreakpoint.html
+++ b/components/select/apiExamples/fullscreenBreakpoint.html
@@ -1,4 +1,5 @@
 <auro-select fullscreenBreakpoint="lg">
+  <span slot="label">Select Example</span>
   <span slot="bib.fullscreen.headline">Bib Headline</span>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
