--- a/components/select/apiExamples/helpText.html
+++ b/components/select/apiExamples/helpText.html
@@ -2,6 +2,7 @@
   <span slot="bib.fullscreen.headline">Bib Headline</span>
   <label slot="placeholder">Placeholder Text</label>
   <span slot="helpText">Custom help text message.</span>
+  <span slot="label">helpText select example</span>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
