--- a/components/select/apiExamples/noCheckmark.html
+++ b/components/select/apiExamples/noCheckmark.html
@@ -1,6 +1,7 @@
 <auro-select nocheckmark>
     <span slot="bib.fullscreen.headline">Bib Headline</span>
     <label slot="placeholder">Placeholder Text</label>
+    <span slot="label">nocheckmark Select Example</span>
     <auro-menu>
         <auro-menuoption value="stops">Stops</auro-menuoption>
         <auro-menuoption value="price">Price</auro-menuoption>
