--- a/components/select/apiExamples/required.html
+++ b/components/select/apiExamples/required.html
@@ -1,5 +1,6 @@
 <auro-select required setCustomValidityValueMissing="Custom required validation error message.">
   <span slot="bib.fullscreen.headline">Bib Headline</span>
+  <span slot="label">required field</span>
   <label slot="placeholder">Placeholder Text</label>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
