--- a/components/select/apiExamples/withIcons.html
+++ b/components/select/apiExamples/withIcons.html
@@ -1,6 +1,7 @@
 <auro-select>
   <span slot="bib.fullscreen.headline">Bib Headline</span>
   <label slot="placeholder">Placeholder Text</label>
+  <span slot="label">Select Example</span>
   <auro-menu>
     <auro-menuoption value="air">
       <auro-icon label customColor category="health" name="air">Air</auro-icon>
