--- a/components/radio/src/styles/color.scss
+++ b/components/radio/src/styles/color.scss
@@ -59,3 +59,36 @@
 :host(.focus-visible) {
   --ds-auro-radio-btn-border-color: var(--ds-advanced-color-state-focused, #{$ds-advanced-color-state-focused});
 }
+
+/* onDark styles */
+:host([onDark]) {
+  --ds-auro-radio-label-color: var(--ds-basic-color-texticon-inverse, #{$ds-basic-color-texticon-inverse});
+  --ds-auro-radio-btn-border-color: var(--ds-basic-color-border-inverse, #{$ds-basic-color-border-inverse});
+}
+
+:host([onDark][checked]) {
+  --ds-auro-radio-btn-inset-color: var(--ds-advanced-color-boolean-indicator-inverse, #{$ds-advanced-color-boolean-indicator-inverse});
+  --ds-auro-radio-btn-fill-color: var(--ds-advanced-color-boolean-istrue-inverse, #{$ds-advanced-color-boolean-istrue-inverse});
+  --ds-auro-radio-btn-border-color: var(--ds-advanced-color-boolean-istrue-inverse, #{$ds-advanced-color-boolean-istrue-inverse});
+}
+
+:host([onDark][error]) {
+  --ds-auro-radio-btn-border-color: var(--ds-advanced-color-boolean-error-inverse, #{$ds-advanced-color-boolean-error-inverse});
+}
+
+:host([onDark][checked][error]) {
+  --ds-auro-radio-btn-fill-color: var(--ds-advanced-color-boolean-error-inverse, #{$ds-advanced-color-boolean-error-inverse});
+}
+
+:host([onDark][disabled]) {
+  --ds-auro-radio-btn-border-color: var(--ds-advanced-color-state-background-inverse-disabled, #{$ds-advanced-color-state-background-inverse-disabled});
+  --ds-auro-radio-label-color: var(--ds-basic-color-texticon-inverse-disabled, #{$ds-basic-color-texticon-inverse-disabled});
+}
+
+:host([onDark][checked][disabled]) {
+  --ds-auro-radio-btn-fill-color: var(--ds-advanced-color-state-background-inverse-disabled, #{$ds-advanced-color-state-background-inverse-disabled});
+}
+
+:host([onDark].focus-visible) {
+  --ds-auro-radio-btn-border-color: var(--ds-advanced-color-state-focused-inverse, #{$ds-advanced-color-state-focused-inverse});
+}
