--- a/components/radio/src/styles/groupColor.scss
+++ b/components/radio/src/styles/groupColor.scss
@@ -24,3 +24,11 @@
 :host([disabled]) {
   --ds-auro-radio-group-label-color: var(--ds-basic-color-texticon-disabled, #{$ds-basic-color-texticon-disabled});
 }
+
+:host([onDark]) {
+  --ds-auro-radio-group-label-color: var(--ds-basic-color-texticon-inverse, #{$ds-basic-color-texticon-inverse});
+}
+
+:host([onDark][disabled]) {
+  --ds-auro-radio-group-label-color: var(--ds-basic-color-texticon-inverse-disabled, #{$ds-basic-color-texticon-inverse-disabled});
+}
