--- a/components/checkbox/src/styles/auro-checkbox.scss
+++ b/components/checkbox/src/styles/auro-checkbox.scss
@@ -19,7 +19,7 @@
    declaration-empty-line-before */
 
 // Import Auro tokens
-@import "@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables";
+@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
 
 @import "@aurodesignsystem/webcorestylesheets/src/breakpoints";
 @import "@aurodesignsystem/webcorestylesheets/src/core";
@@ -37,7 +37,7 @@ fieldset {
 
 .displayFlex {
   slot {
-    @include auro_breakpoint--sm {
+    @include auro_grid-breakpoint--sm {
       display: flex;
     }
   }
