--- a/components/helptext/src/styles/color.scss
+++ b/components/helptext/src/styles/color.scss
@@ -6,6 +6,14 @@
   --ds-auro-helptext-color: var(--ds-basic-color-status-error, #{$ds-basic-color-status-error});
 }
 
+:host([onDark]) {
+  --ds-auro-helptext-color: var(--ds-basic-color-texticon-inverse-muted, #{$ds-basic-color-texticon-inverse-muted});
+}
+
+:host([onDark][error]) {
+  --ds-auro-helptext-color: var(--ds-advanced-color-state-error-inverse, #{$ds-advanced-color-state-error-inverse});
+}
+
 .helptext-wrapper {
   color: var(--ds-auro-helptext-color);
 }
