--- a/components/radio/src/styles/style.scss
+++ b/components/radio/src/styles/style.scss
@@ -6,6 +6,8 @@
 /* stylelint-disable
    no-duplicate-selectors,
    declaration-empty-line-before,
+   declaration-property-value-no-unknown,
+   scss/dollar-variable-first-in-block,
    selector-max-class,
    scss/selector-nest-combinators,
    order/properties-order,
@@ -23,6 +25,8 @@
 @import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 @import '@aurodesignsystem/webcorestylesheets/src/core';
 @import '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
+
+$bullet-to-border-distance: 3px;
 
 :host {
   display: block;
@@ -80,16 +84,23 @@
     position: absolute;
     z-index: 1;
     top: 50%;
-    left: var(--ds-size-50, $ds-size-50);
+    left: var(--ds-size-100, $ds-size-100);
 
-    width: calc(var(--ds-size-200, $ds-size-200) + var(--ds-size-50, $ds-size-50));
-    height: calc(var(--ds-size-200, $ds-size-200) + var(--ds-size-50, $ds-size-50));
-    transform: translateY(-50%);
+    width: var(--ds-size-250, $ds-size-250);
+    height: var(--ds-size-250, $ds-size-250);
+
+    // When the size is too small, the circle looks like an oval on safari.
+    // To avoid that, scale down the bigger circle to the proper size.
+    $scale: $ds-size-250 / ($ds-size-250 + $ds-size-100);
+    transform: translateY(-50%) scale($scale, $scale);
+    transform-origin: center left;
 
     content: '';
 
-    border-radius: 50%;
-    border: 1px solid;
+    // Use outline becasue box-shadow has a coord misalignment on safari.
+    border-radius: 9999px;
+    outline: 1px / $scale solid;
+    outline-offset: $bullet-to-border-distance / $scale;
   }
 }
 
