--- a/components/select/demo/index.html
+++ b/components/select/demo/index.html
@@ -47,5 +47,20 @@
     <!-- If additional elements are needed for the demo, add them here. -->
     <script src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-accordion@latest/dist/auro-accordion__bundled.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-button@latest/dist/auro-button__bundled.js" type="module"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-formkit@3.2.4/auro-input/+esm"></script>
+
+    <style>
+      .autofill-example-form .input-row {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+        gap: 15px;
+      }
+      .autofill-example-form .input-row auro-input,
+      .autofill-example-form .input-row auro-select {
+        flex: 1 0 auto;
+      }
+    </style>
   </body>
 </html>
