--- a/components/input/src/styles/style.scss
+++ b/components/input/src/styles/style.scss
@@ -1,4 +1,5 @@
 @use '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
+@use "@aurodesignsystem/webcorestylesheets/dist/bundled/type/classes.alaska.min.css";
 
 // COMMON FOR ALL ---------------------------------------------------
 
