--- a/components/datepicker/src/styles/style-auro-calendar-month.scss
+++ b/components/datepicker/src/styles/style-auro-calendar-month.scss
@@ -10,6 +10,8 @@
 @use '@aurodesignsystem/webcorestylesheets/src/breakpoints' as vb;
 @use '@aurodesignsystem/webcorestylesheets/src/core';
 
+@use '@aurodesignsystem/webcorestylesheets/dist/bundled/type/classes.alaska.css';
+
 /* stylelint-disable selector-class-pattern, property-no-vendor-prefix, order/properties-order, no-descending-specificity, color-function-notation, max-line-length, declaration-empty-line-before */
 
 $calendar-width: 336px;
@@ -66,11 +68,6 @@ $calendar-padding-desktop: var(--ds-size-200, vac.$ds-size-200);
   flex: 1;
   flex-direction: row;
   justify-content: center;
- 
-  font-size: 20px; // var(--ds-basic-text-heading-xs-breakpoint-md-font-size, v.$ds-basic-text-heading-xs-breakpoint-md-font-size);
-  font-weight: 450; // var(--ds-basic-text-heading-xs-breakpoint-md-font-weight, v.$ds-basic-text-heading-xs-breakpoint-md-font-weight);
-  letter-spacing: 0; // var(--ds-basic-text-heading-xs-breakpoint-md-letter-spacing, v.$ds-basic-text-heading-xs-breakpoint-md-letter-spacing);
-  line-height: 130%; // var(--ds-basic-text-heading-xs-breakpoint-md-line-height, v.$ds-basic-text-heading-xs-breakpoint-md-line-height);
 
   div {
     &:first-child {
@@ -112,8 +109,6 @@ $calendar-padding-desktop: var(--ds-size-200, vac.$ds-size-200);
 
   align-items: center;
   justify-content: center;
-
-  font-weight: 700;
 }
 
 .tbody {
@@ -121,7 +116,7 @@ $calendar-padding-desktop: var(--ds-size-200, vac.$ds-size-200);
 
   transition: all 0ms;
   transform: translateX(0);
-  
+
   @include vb.auro_grid-breakpoint--sm {
     height: 384px; // height is fixed to always leave room for months spanning 6 rows
   }
